welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: ';' expected but 'else' found.
  } else {
    ^